<resources>
    <string name="app_name">Mehak Coffee</string>
    <string name="no_hp">Nomor Hp</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="search">Mehak Gula Aren</string>
    <string name="hint_username">Username</string>
    <string name="add_to_cart">Add item to cart</string>
    <string name="checkout_details">Checkout Details</string>
    <string name="deliver_to">Deliver to</string>
    <string name="edit">Edit</string>
    <string name="order_details">Order Details</string>
    <string name="delete_checkout">Delete Checkout</string>
    <string name="order_subtotal">Order Subtotal</string>
    <string name="price">Rp 0</string>
    <string name="payment_method">COD</string>
    <string name="checkout">Checkout</string>
    <string name="message">Pesananmu akan disiapkan dan segera diantar</string>
    <string name="detail">Detail</string>
    <string name="diterima">Diterima</string>
    <string name="buy_again">Belanja Lagi</string>
    <string name="string_coffee">Coffee</string>
    <string name="account">Akun</string>
    <string name="logout">Log Out</string>
    <string name="save">Simpan</string>
    <string name="logout_message">Apakah anda yakin ingin keluar?</string>
    <string name="profile">Profile</string>
    <string name="pesanan_saya">Pesanan Saya</string>
    <string name="my_orders">Pesanan Saya</string>
    <string name="sedang_berjalan">Sedang Berjalan</string>
    <string name="riwayat_pesanan">Riwayat Pesanan</string>
    <string name="fullname">Nama lengkap</string>
    <string name="minuman">Minuman</string>
    <string name="cemilan">Cemilan</string>
    <string name="all_item">All</string>
    <string name="payment">Payment</string>
</resources>