<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccountActivity">

    <LinearLayout
        android:id="@+id/details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"
            android:text="@string/account"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/details_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                android:layout_marginTop="16dp"
                app:cardElevation="0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1"
                    android:layout_margin="8dp">

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textStyle="bold"
                            android:textColor="@color/chocolate"
                            />

                        <EditText
                            android:id="@+id/et_nama"
                            android:text="Afnurullah"
                            android:layout_column="1"
                            android:textSize="16sp"
                            android:layout_marginStart="10dp"
                            android:textAlignment="viewEnd"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_hp"
                            android:textStyle="bold"
                            android:textColor="@color/chocolate"
                            />

                        <EditText
                            android:id="@+id/et_nohp"
                            android:text="081234567890"
                            android:layout_column="1"
                            android:layout_marginStart="10dp"
                            android:textAlignment="viewEnd"
                            android:textSize="16sp"
                            />
                    </TableRow>

                    <TableRow
                        android:layout_marginTop="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textStyle="bold"
                            android:textColor="@color/chocolate"
                            />

                        <EditText
                            android:id="@+id/et_email"
                            android:text="afnurullah@gmail.com"
                            android:layout_column="1"
                            android:layout_marginStart="10dp"
                            android:textAlignment="viewEnd"
                            android:textSize="16sp"
                            />
                    </TableRow>

                    <TableRow
                        android:layout_marginTop="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textStyle="bold"
                            android:textColor="@color/chocolate"
                            />
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            android:layout_marginStart="10dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_password"
                                android:gravity="center|right"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:textSize="16sp"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </TableRow>

                    <TableRow
                        android:layout_marginTop="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alamat"
                            android:textStyle="bold"
                            android:textColor="@color/chocolate"
                            />

                        <EditText
                            android:id="@+id/et_alamat"
                            android:layout_height="100dp"
                            android:inputType="textMultiLine"
                            android:text="Jl. Kolonel Sugiono, No. -"
                            android:layout_column="1"
                            android:layout_marginStart="10dp"
                            android:gravity="center_vertical|right"
                            android:minHeight="50dp"
                            android:textSize="16sp"
                            />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="256dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/dangerroundedbutton"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>