<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@null"
    android:scrollbarThumbVertical="@null"
    tools:context=".OrderDetailActivity">

    <LinearLayout
        android:id="@+id/details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"
            android:text="@string/order_details"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/details_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/deliver_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deliver_to"
                        android:textColor="@color/black"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/edit_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_alignParentEnd="true"
                        />

                    <TextView
                        android:id="@+id/details_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/deliver_to"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="12dp"
                        android:gravity="center"
                        android:text="Afnurullah"
                        app:drawableStartCompat="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/details_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/details_name"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:drawablePadding="12dp"
                        android:text="08xx"
                        app:drawableStartCompat="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/details_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/details_phone"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:drawablePadding="12dp"
                        android:text="Jl. Kolonel Sugiono, No. "
                        app:drawableStartCompat="@drawable/ic_address" />

                    <TextView
                        android:id="@+id/details_estimate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/details_address"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:drawablePadding="12dp"
                        android:text="10 - 15 menit"
                        app:drawableStartCompat="@drawable/ic_estimate" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorTextInputBackground"
                android:layout_marginTop="18dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorTextInputBackground"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                android:layout_marginTop="16dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/order_subtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_subtotal"
                        />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:layout_alignParentEnd="true"
                        />

                    <TextView
                        android:id="@+id/delivery_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/order_subtotal"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="Delivery Fee"/>

                    <TextView
                        android:id="@+id/ongkir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/price"
                        android:layout_below="@id/price"
                        android:layout_alignParentEnd="true"
                        />

                    <TextView
                        android:id="@+id/title_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/delivery_fee"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="Total"/>

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/price"
                        android:layout_below="@id/ongkir"
                        android:layout_alignParentEnd="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_total"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="Payment Method"/>

                    <TextView
                        android:id="@+id/payment_method"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/payment_method"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_below="@id/total"
                        android:layout_alignParentEnd="true"

                        />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_diterima"
                android:layout_width="256dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/diterima"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_buyagain"
                android:layout_width="256dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/buy_again"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>