<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"
            android:text="@string/profile"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/pesanan_saya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pesanan_saya"
                android:gravity="left|center"
                android:minHeight="50dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/ic_order"
                app:drawableEndCompat="@drawable/ic_arrow" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/akun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            android:layout_marginTop="8dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:gravity="left|center"
                android:minHeight="50dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/ic_person"
                app:drawableEndCompat="@drawable/ic_arrow" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/profile"
        android:layout_alignParentBottom="true"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:src="@drawable/logomehakputih" />

</RelativeLayout>